--- a/css/all.css
+++ b/css/all.css
@@ -6,12 +6,24 @@
 }
 .top{
 	width: 100%;
-	height: 200px;
+	height: 80px;
+}
+.logo{
+	float: left;
+}
+.menu{
+	float: left;
+	height: 100%;
+	margin-left: 50px;
 }
 .menu ul{
+	line-height: 60px;
 	padding:10px;
 }
 .menu ul li{
 	display: inline;
-	margin:0 10px;
+}
+.footer p{
+	text-align: right;
+	color: #999;
 }
