修改版面樣式

--- a/css/all.css
+++ b/css/all.css
@@ -39,6 +39,18 @@
 	line-height: 30px;
 	font-size: 16px;
 }
+.sub_create{
+	padding-left: 150px;
+}
+.up_img{
+	margin-left: 150px;
+}
+.sub_create input{
+	background: none;
+	background-color: #999;
+	cursor: pointer;
+	padding:3px;
+}
 .content textarea{
 	width: 35%;
 	min-width: 165px;
@@ -49,16 +61,16 @@
 }
 .content li p{
 	display: inline-block;
-	width: 100px;
+	width: 150px;
 	text-align: right;
 }
-.content li.err p{
-	width:100%;
-	color: red;
+.content .err{
 	text-align: left;
+	color: red;
+	padding-left: 5px;
 }
 .content li input{
-	width: 170px;
+	width: 35%;
 }
 input, textarea{
 	margin: 0;
@@ -80,19 +92,21 @@ input, textarea{
 	width: 220px;
 	float: left;
 	margin:10px;
+	text-align: center;
 }
 .main p{
 	margin-bottom: 20px;
-}
-.main .name, .main .des, .main img{
-	text-align: center;
 }
 .main .des{
 	color: #666;
 }
 .main img{
-	width:200px;
+	max-width:200px;
+	max-height: 200px;
+}
+.con_img{
 	height: 200px;
+	padding-bottom: 5px;
 }
 .price{
 	color: red;
@@ -111,6 +125,9 @@ input, textarea{
 .product_one .pimg{
 	width:50%;
 	text-align: center;
+}
+.product_one .pimg{
+	max-width: 100%;
 }
 .product_one .des{
 	margin-top: 30px;
