--- a/css/all.css
+++ b/css/all.css
@@ -87,6 +87,10 @@ input, textarea{
 	line-height: 40px;
 	height: 45px;
 }
+.ul_tit .kimg{
+	padding-top: 6px;
+	padding-right: 10px;
+}
 .ul_cont{
 	width:80%;
 }
